# taskr

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  taskr.toml  taskrfile
.github/: release-drafter.yml  release.yml
.github/workflows/: cmake-clang-gcc.yaml  cmake-multi-platform.yaml  pages.yml  release.yml
cmake/: UpdateSubmodules.cmake
src/: config.h  env_helper.hpp  errors.hpp  executor.hpp  main.cpp  parser.hpp  util.hpp  utils.hpp
tests/: test.cpp  test_errors.cpp  test_parser.cpp  test_util.cpp
www/: index.html
